Prevent scrolling out of bounds.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,7 @@ img {
     -ms-user-select: none;
     user-select: none;
 }
+
+body {
+    overflow: hidden;
+}
